# TensorGame

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: codeql.yml
src/: main.cpp
src/editor/: CodeEditor.cpp  CodeEditor.hpp
src/gui/: Application.cpp  Application.hpp  Colors.hpp  TensorVisualizer.cpp  TensorVisualizer.hpp  UIComponents.cpp  UIComponents.hpp
src/lessons/: Lesson.hpp  Lesson1_Basics.cpp  Lesson2_Creation.cpp  Lesson3_Operations.cpp  Lesson4_Database.cpp  Lesson5_Broadcasting.cpp  Lesson6_NeuralNetworks.cpp  LessonManager.cpp  LessonManager.hpp
src/progress/: Achievements.cpp  Achievements.hpp
src/quiz/: Quiz.cpp  Quiz.hpp
src/sandbox/: Sandbox.cpp  Sandbox.hpp
src/tensor/: Tensor.cpp  Tensor.hpp  TensorDB.cpp  TensorDB.hpp
